fix toc box on firefox

--- a/styles/page.css
+++ b/styles/page.css
@@ -83,6 +83,7 @@ code {
   border: 1px solid #bbb;
   padding: 10px;
   width: fit-content;
+  width: -moz-fit-content;
 }
 .tocHeader {
   display: block;
